--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
+  "name": "vuepress-calligraphy",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-	"deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "element-ui": "^2.4.0",
+    "socket.io-client": "^2.1.1"
   }
 }
