--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "element-ui": "^2.4.0",
-    "socket.io-client": "^2.1.1"
+    "leancloud-storage": "^4.12.2",
+    "socket.io-client": "^2.1.1",
+    "valine": "^1.4.18"
   }
 }
